Fixes #1137: Infobox do not overlap with navbar (#1138)

--- a/src/app/infobox/infobox.component.css
+++ b/src/app/infobox/infobox.component.css
@@ -20,7 +20,6 @@ img{
   transition: 0.3s;
   width: 454px;
   min-height: 240px;
-  margin-top: -18%;
 }
 
 /* Heading */
